# turing

./: .gitignore  CMakeLists.txt
programs/: palindrome_detector_2tapes.tm  task_1.tm  task_2.tm
turing-project/: main.cpp  parser.hpp  turing.hpp  turing_core.hpp  turing_helper.hpp  utils.hpp
